[gd_scene load_steps=19 format=3 uid="uid://odqcfq1oyax2"]

[ext_resource type="Script" path="res://scripts/space.gd" id="1_1vbxk"]
[ext_resource type="Shader" path="res://shaders/move_bg.gdshader" id="2_uk8lv"]
[ext_resource type="Texture2D" uid="uid://bf8s6nq5e7mp4" path="res://assets/Background/background-game.jpg" id="3_1sgxd"]
[ext_resource type="Shader" path="res://shaders/fog.gdshader" id="4_44ok8"]
[ext_resource type="Texture2D" uid="uid://brjaumcj88rfy" path="res://assets/Background/fog_background.png" id="5_v6twx"]
[ext_resource type="PackedScene" uid="uid://ds23m4ungog48" path="res://prefabs/pause_menu.tscn" id="6_338t3"]
[ext_resource type="PackedScene" uid="uid://bl7wdxxgtsd73" path="res://scenes/Asteroid.tscn" id="7_1xjw3"]
[ext_resource type="Script" path="res://scripts/nave.gd" id="8_mteom"]
[ext_resource type="Texture2D" uid="uid://bnyebacix6hj2" path="res://assets/nave.png" id="9_oy2ik"]
[ext_resource type="Script" path="res://scripts/hud_manager.gd" id="10_66gv5"]
[ext_resource type="FontFile" uid="uid://bkoieim3aw1gv" path="res://assets/Fonts/Orbitron-Bold.ttf" id="11_uu8tj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8jlme"]
shader = ExtResource("2_uk8lv")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3yn0o"]
shader = ExtResource("4_44ok8")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_27gqx"]
size = Vector2(1208, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c4t2l"]
size = Vector2(1219, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rjoxg"]
size = Vector2(20, 743)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvfqx"]
size = Vector2(20, 688)

[sub_resource type="CircleShape2D" id="CircleShape2D_eau0j"]
radius = 19.0

[node name="Space" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1vbxk")

[node name="background" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_8jlme")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -680.0
offset_top = -462.5
offset_right = 680.0
offset_bottom = 462.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1sgxd")

[node name="fog" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_3yn0o")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -900.0
offset_top = -846.0
offset_right = 900.0
offset_bottom = 846.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_v6twx")

[node name="ParedeBaixo" type="StaticBody2D" parent="."]
position = Vector2(600, 667)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedeBaixo"]
visible = false
shape = SubResource("RectangleShape2D_27gqx")

[node name="ParedeCima" type="StaticBody2D" parent="."]
position = Vector2(599, 12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedeCima"]
visible = false
position = Vector2(-6, -1)
shape = SubResource("RectangleShape2D_c4t2l")

[node name="ParedeEsquerda" type="StaticBody2D" parent="."]
position = Vector2(1, 364)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedeEsquerda"]
visible = false
shape = SubResource("RectangleShape2D_rjoxg")

[node name="ParedeDireita" type="StaticBody2D" parent="."]
position = Vector2(1201, 338)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedeDireita"]
visible = false
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_jvfqx")

[node name="pause_menu" parent="." instance=ExtResource("6_338t3")]

[node name="SpawnTimer" type="Timer" parent="."]

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(137, 364)

[node name="Asteroid" parent="Node2D" instance=ExtResource("7_1xjw3")]
position = Vector2(0, 0)

[node name="RigidBody2D" type="RigidBody2D" parent="Node2D/Asteroid"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Node2D/Asteroid/RigidBody2D"]
scale = Vector2(3.94737, 3.94737)
shape = SubResource("CircleShape2D_eau0j")

[node name="nave" type="CharacterBody2D" parent="."]
texture_filter = 1
position = Vector2(600, 564)
script = ExtResource("8_mteom")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="nave"]
position = Vector2(-30.8316, -27.45)
scale = Vector2(0.609623, 0.609623)
polygon = PackedVector2Array(-5, -63, 4, -63, 29, -17, 72, 24, 72, 52, 63, 53, 30.8906, 30.2646, 22.6888, 31.905, 22.6888, 41.7471, 30.8906, 43.3875, 39.0923, 51.5893, 42.3731, 81.1157, 19.4081, 81.1157, 19.4081, 66.3525, -19.9605, 66.3525, -19.9605, 81.1157, -44.5659, 81.1157, -42.9255, 63.0717, -31.443, 43.3875, -23.2412, 43.3875, -23.2412, 31.905, -33, 33, -63, 53, -73, 54, -72, 24, -24, -20, -23, -34)

[node name="Nave" type="Sprite2D" parent="nave"]
position = Vector2(-31, -24)
scale = Vector2(0.225989, 0.225988)
texture = ExtResource("9_oy2ik")

[node name="player_pos" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
pivot_offset = Vector2(449, 281)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_66gv5")

[node name="timer_background" type="ColorRect" parent="HUD/control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -2.013
anchor_top = -0.405
anchor_right = 1.974
anchor_bottom = 1.0
offset_left = 2416.6
offset_top = 309.375
offset_right = -2069.8
offset_bottom = -593.0
color = Color(0.992157, 0.34902, 0.129412, 1)

[node name="container" type="MarginContainer" parent="HUD/control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 40

[node name="timer_counter" type="HBoxContainer" parent="HUD/control/container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 22

[node name="timer_label" type="Label" parent="HUD/control/container/timer_counter"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.0509804, 0.00392157, 0.0862745, 1)
theme_override_colors/font_outline_color = Color(0.992157, 0.34902, 0.129412, 1)
theme_override_constants/line_spacing = 141
theme_override_fonts/font = ExtResource("11_uu8tj")
theme_override_font_sizes/font_size = 30
text = "Tempo:"
uppercase = true

[node name="timer_counter" type="Label" parent="HUD/control/container/timer_counter"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.0509804, 0.00392157, 0.0862745, 1)
theme_override_colors/font_outline_color = Color(0.992157, 0.34902, 0.129412, 1)
theme_override_constants/line_spacing = 141
theme_override_fonts/font = ExtResource("11_uu8tj")
theme_override_font_sizes/font_size = 30
text = "00:00"
uppercase = true

[node name="clock_timer" type="Timer" parent="HUD/control"]
autostart = true

[connection signal="timeout" from="HUD/control/clock_timer" to="HUD/control" method="_on_clock_timer_timeout"]
